--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build" : "npm install"
+    "build" : "npm build"
   },
   "author": "",
   "license": "ISC",
