--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_WEB_PORT = 
-REACT_APP_DATA_BASE = mongodb://127.0.0.1:27017/?directConnection=true 
+REACT_APP_DATA_BASE = mongodb+srv://aryamgupta4:aryam123@cluster0.ag0dm12.mongodb.net/?retryWrites=true&w=majority
